--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,4 +1,4 @@
-<form action="/tweets/new" method="POST">
+<form action="/tweets" method="POST">
   <h3>Content:</h3>
   <input type="text" name="content"><br>
   <h3>Create Your Tweet:</h3>
