--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -1,10 +1,10 @@
 <p><%=@tweet.content%></p>
-<form method="POST" action="/tweet/<%=@tweet.id%>">
+<form method="POST" action="/tweets/<%=@tweet.id%>">
   <input id="hidden" type="hidden" name="_method" value="DELETE">
   <input type="submit" value="Delete Tweet">
 </form>
 
-<form method="POST" action="/tweet/<%=@tweet.id%>">
+<form method="POST" action="/tweets/<%=@tweet.id%>">
   <input id="hidden" type="hidden" name="_method" value="PATCH">
   <input type="submit" value="Edit Tweet">
 </form>
