--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -4,6 +4,4 @@
   <input type="submit" value="Delete Tweet">
 </form>
 
-<form method="POST" action="/tweets/<%=@tweet.id%>">
-  <input type="submit" value="Edit Tweet">
-</form>
+<a href="/tweets/<%=@tweet.id%>">Edit Tweet</a>
