--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -4,4 +4,4 @@
   <input type="submit" value="Delete Tweet">
 </form>
 
-<a href="/tweets/<%=@tweet.id%>">Edit Tweet</a>
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
