Automatically backed up by Learn

--- a/app/views/tweets/edit.erb
+++ b/app/views/tweets/edit.erb
@@ -1,4 +1,5 @@
 <form action="/tweets" method="POST">
+  <input id="hidden" type="hidden" name="_method" value="PATCH">
   <h3>Content:</h3>
   <input type="text" name="content"><br>
   <h3>Create Your Tweet:</h3>
