--- a/app/views/tweets/edit.erb
+++ b/app/views/tweets/edit.erb
@@ -1,7 +1,7 @@
 <form action="/tweets" method="POST">
   <input id="hidden" type="hidden" name="_method" value="PATCH">
   <h3>Content:</h3>
-  <input type="text" name="content"><br>
+  <input type="text" name="content" value="<%=@tweet.content%>"><br>
   <h3>Create Your Tweet:</h3>
   <input type="submit" id="submit">
 </form>
