--- a/app/views/tweets/edit.erb
+++ b/app/views/tweets/edit.erb
@@ -1,4 +1,4 @@
-<form action="/tweets" method="POST">
+<form action="/tweets/<%=@tweet.id%>/edit" method="POST">
   <input id="hidden" type="hidden" name="_method" value="PATCH">
   <h3>Content:</h3>
   <input type="text" name="content" value="<%=@tweet.content%>"><br>
